--- a/autohome.css
+++ b/autohome.css
@@ -1,4 +1,4 @@
-body {  background-image:url('http://sd160.k12.sd.us/WebSite1/bkg-blu.jpg'); /* http://www.himix.lt/css/blueback.jpg */
+body {  background-image:url('http://www.himix.lt/css/blueback.jpg'); /* http://www.himix.lt/css/blueback.jpg  http://sd160.k12.sd.us/WebSite1/bkg-blu.jpg */ 
 	margin:50px 0px; padding:0px;
 	text-align:center;
 	}
