--- a/autohome.css
+++ b/autohome.css
@@ -1,4 +1,4 @@
-body {  background-image:url('http://www.himix.lt/css/blueback.jpg'); /* http://www.himix.lt/css/blueback.jpg  http://sd160.k12.sd.us/WebSite1/bkg-blu.jpg */ 
+body {  background-image:url('https://live.staticflickr.com/65535/50569282901_100e6b814a_m.jpg'); /* http://www.himix.lt/css/blueback.jpg  http://sd160.k12.sd.us/WebSite1/bkg-blu.jpg */ 
 	margin:50px 0px; padding:0px;
 	text-align:center;
 	}
